--- a/data/mydb.properties
+++ b/data/mydb.properties
@@ -1,5 +1,5 @@
-#HSQL Database Engine 2.5.0
-#Thu Jan 19 15:51:00 WAT 2023
-version=2.5.0
-modified=no
+#HSQL Database Engine 2.6.0
+#Thu Jan 19 16:49:45 WAT 2023
+version=2.6.0
+modified=yes
 tx_timestamp=15720
